--- a/projekty.html
+++ b/projekty.html
@@ -117,7 +117,7 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="fullscreen-slider.html">
                                                     <div class="project-grid-item-img">
-                                                        <img   src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/51f1b143659493.57f77d5c9619a-768x512.jpg"
+                                                        <img   src="images/interiors/01.png" data-lazy-src="img/work-category-list/51f1b143659493.57f77d5c9619a-768x512.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="seascape-villa image" />
                                                     </div>
                                                 </a>
