image size (fullheight) delete

--- a/projekty.html
+++ b/projekty.html
@@ -359,7 +359,7 @@
 
 
                 <div class="prague-categories-outer">
-                    <div class="container-fluid no-padd top-banner categories fullheight light">
+                    <div class="container-fluid no-padd top-banner categories light">
                         <span class="overlay"></span>
                         <img src="images/hero3.png" id="detskepokojicky" class="cover-background position-absolute top-0 start-0 w-100 h-100" style="object-fit: cover;" alt="main banner image" />
                         <div class="row align-items-center h-100 justify-content-center">
@@ -631,7 +631,7 @@
                 </div>
 
                 <div class="prague-categories-outer">
-                    <div class="container-fluid no-padd top-banner categories fullheight light">
+                    <div class="container-fluid no-padd top-banner categories light">
                         <span class="overlay"></span>
                         <img src="images/hero2.png" id="komercniprostory" class="cover-background position-absolute top-0 start-0 w-100 h-100" style="object-fit: cover;" alt="main banner image" />
                         <div class="row align-items-center h-100 justify-content-center">
