--- a/projekty.html
+++ b/projekty.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/responsive.css"/>
     <link rel="stylesheet" href="demos/consulting/consulting.css" />
-    <link rel="stylesheet" href="css/css/style.css">
+    <link rel="stylesheet" href="css/prague/style.css">
 </head>
 
 <body>
