--- a/projekty.html
+++ b/projekty.html
@@ -22,7 +22,18 @@
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/responsive.css"/>
     <link rel="stylesheet" href="demos/consulting/consulting.css" />
+
     <link rel="stylesheet" href="css/prague/style.css">
+    <link rel="stylesheet" href="css/prague/swiper.min.css">
+    <link rel="stylesheet" href="css/prague/slick.min.css">
+    <link rel="stylesheet" href="css/prague/magnific-popup.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="css/prague/et-line-font.css">
+    <link rel="stylesheet" href="css/prague/before-after.min.css">
+    <link rel="stylesheet" href="css/prague/bootstrap.min.css">
+    <link rel="stylesheet" href="css/prague/unit-test.css">
+    <link rel="stylesheet" href="css/prague/google_map.min.css">
 </head>
 
 <body>
