--- a/projekty.html
+++ b/projekty.html
@@ -128,10 +128,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="seascape-villa.html">Seascape
-                                                            Villa</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="seascape-villa.html">Luxusní apartmán</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Aqaba, Jordan </div>
+                                                        Praha 1 </div>
 
                                                 </div>
                                             </div>
