--- a/projekty.html
+++ b/projekty.html
@@ -124,11 +124,11 @@
                                                 <a class="project-grid-item-img-link" href="fullscreen-slider.html">
                                                     <div class="project-grid-item-img">
                                                         <img   src="images/interiors/thumbnails/01.png" data-lazy-src="img/work-category-list/51f1b143659493.57f77d5c9619a-768x512.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="seascape-villa image" />
+                                                            class="s-img-switch wp-post-image" alt="seascape-villa image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="seascape-villa.html">Luxusní apartmán</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="fullscreen-slider.html">Luxusní apartmán</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Praha 1 </div>
 
