--- a/projekty.html
+++ b/projekty.html
@@ -123,8 +123,8 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="fullscreen-slider.html">
                                                     <div class="project-grid-item-img">
-                                                        <img   src="images/interiors/thumbnails/01.png" data-lazy-src="img/work-category-list/51f1b143659493.57f77d5c9619a-768x512.jpg"
-                                                            class="" alt="seascape-villa image" />
+                                                        <img   src="images/interiors/thumbnails/01.png" data-lazy-src="images/interiors/thumbnails/01.png"
+                                                            class="s-img-switch wp-post-image" alt="seascape-villa image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
