detske pokojicky_images_change

--- a/projekty.html
+++ b/projekty.html
@@ -318,7 +318,7 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="yabroudi-villa.html">
                                                     <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/8a1f5243879223-768x492.jpg"
+                                                        <img  src="images/detske_pokojicky/thumbnails/1. rose.jpg" data-lazy-src="images/detske_pokojicky/thumbnails/1. rose.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="yabroudi-villa image" />
                                                     </div>
                                                 </a>
@@ -338,7 +338,7 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="amman-rotana-hotel.html">
                                                     <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/c5854644221919.580bb620ecb87-768x480.jpg"
+                                                        <img  src="images/detske_pokojicky/thumbnails/2. dino.JPG" data-lazy-src="images/detske_pokojicky/thumbnails/2. dino.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="amman-hotel image" />
                                                     </div>
                                                 </a>
@@ -358,7 +358,7 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="lorean-hotel.html">
                                                     <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/5bcde412273735.562b2ee3d45b7-768x432.jpg"
+                                                        <img  src="images/detske_pokojicky/thumbnails/3. blue.jpg" data-lazy-src="images/detske_pokojicky/thumbnails/3. blue.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="lorean-hotel image" />
                                                     </div>
                                                 </a>
@@ -378,7 +378,7 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="velinston-apartments.html">
                                                     <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/2518c145492213.58asasd330774816c9-768x461.jpg"
+                                                        <img  src="images/detske_pokojicky/thumbnails/4. mountain.JPG" data-lazy-src="images/detske_pokojicky/thumbnails/4. mountain.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="velinston-apartments image" />
                                                     </div>
                                                 </a>
@@ -398,7 +398,7 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="luxurious-apartment.html">
                                                     <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/d82b0146193843.584add9cde1f9-e1542297805791-768x605.jpg"
+                                                        <img  src="images/detske_pokojicky/thumbnails/5. labuœ.jpg" data-lazy-src="images/detske_pokojicky/thumbnails/5. labuœ.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="luxurious-apartment image" />
                                                     </div>
                                                 </a>
@@ -438,7 +438,7 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="alto-furniture.html">
                                                     <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/29d9cd46052073.58467b6d8b26b-e1542297883242-768x378.jpg"
+                                                        <img  src="images/detske_pokojicky/thumbnails/6. zajda.JPG" data-lazy-src="images/detske_pokojicky/thumbnails/6. zajda.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="alto-furniture image" />
                                                     </div>
                                                 </a>
@@ -453,104 +453,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="tycoon-office-interior-design.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/bf92c846103027.5847f4469b5f6-e1542297970997-768x697.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="tycoon-office-interior-design image" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="tycoon-office-interior-design.html">Tycoon
-                                                            Office Interior Design</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Casablanca, Morocco </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="stone-krow-house.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/7e39d145952101.58428e52b9279-768x419.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="post image"/>
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="stone-krow-house.html">Stone
-                                                            Krow House</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        New York, USA </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="henders-tragers-villa.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/97fcd845663937.58385c7760f03-768x406.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="henders-tragers-villa image" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="henders-tragers-villa.html">Henders
-                                                            Tragers Villa</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Minsk, Belarus </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="pastel-tones-design.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/unreal_09-768x432.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="pastel-tones-design image" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="pastel-tones-design.html">Pastel
-                                                            Tones design</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Minsk, Belarus </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="daniel-moore-appartaments.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/986e2c46465381.58554f23580cc-768x432.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="daniel-moore-appartaments image" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="daniel-moore-appartaments.html">Daniel
-                                                            Moore Appartaments</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Amsterdam, The Netherlands </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
+                                    
                                 </div>
                             </div>
                         </div>
