komerce images change

--- a/projekty.html
+++ b/projekty.html
@@ -493,7 +493,7 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="european-lard-station.html">
                                                     <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/e55f0243174379.57e5b1bdd7939-e1492696696110-768x426.jpg"
+                                                        <img  src="images/komerce/thumbnails/1. phi.jpg" data-lazy-src="images/komerce/thumbnails/1. phi.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="european-lard-station" />
                                                     </div>
                                                 </a>
@@ -513,7 +513,7 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="yabroudi-villa.html">
                                                     <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/8a1f5243879223-768x492.jpg"
+                                                        <img  src="images/komerce/thumbnails/2. adel salon.JPG" data-lazy-src="images/komerce/thumbnails/2. adel salon.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="yabroudi-villa image" />
                                                     </div>
                                                 </a>
@@ -533,7 +533,7 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="cultural-complex-centre.html">
                                                     <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/67162a45076555.58260565e42a0-768x387.jpg"
+                                                        <img  src="images/komerce/thumbnails/3. gold barbers.jpg" data-lazy-src="images/komerce/thumbnails/3. gold barbers.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="cultural-complex-centre image" />
                                                     </div>
                                                 </a>
@@ -553,7 +553,7 @@
                                             <div class="project-grid-wrapper">
                                                 <a class="project-grid-item-img-link" href="dalbourne-villa.html">
                                                     <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/57c8b543253643.57e957e02ae33-768x461.jpg"
+                                                        <img  src="images/komerce/thumbnails/4. hexagon.JPG" data-lazy-src="images/komerce/thumbnails/4. hexagon.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="dalbourne-villa image" />
                                                     </div>
                                                 </a>
@@ -568,164 +568,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="amman-rotana-hotel.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/c5854644221919.580bb620ecb87-768x480.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="amman-hotel image" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="amman-rotana-hotel.html">Amman
-                                                            Rotana Hotel</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Amman, Jordan </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="french-embassy.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/f1ea2543662615.57f7990d59dc7-768x461.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="french-embassy image" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="french-embassy.html">French
-                                                            Embassy</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Casablanca, Morocco </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="lorean-hotel.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/5bcde412273735.562b2ee3d45b7-768x432.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="lorean-hotel" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="lorean-hotel.html">Handebr
-                                                            the Villa</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Rotterdam, Netherlands </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="aqabas-skyscraper.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/0cb0bb46919687.586a967f3036d-768x576.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="aqabas-skyscraper image" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="aqabas-skyscraper.html">Eastern
-                                                            Sector</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Paris, France </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="seascape-villa-2.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/05c6fb21323747.5604410777d9a-768x534.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="seascape-villa-2 image" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="seascape-villa-2.html">Seascape
-                                                            Villa</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Casablanca, Morocco </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="gerouse-house.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/d82b0146193843.584add9cde1f9-e1542297805791-768x605.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="gerouse-house image" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="gerouse-house.html">Gerouse
-                                                            House</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Perth, Australia </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="veilstone-house.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/5eab1e28066719.560a3f2002705-768x450.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="veilstone-house image" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="veilstone-house.html">Veilstone
-                                                            House</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Perth, Australia </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="portfolio-item-wrapp">
-                                        <div class="portfolio-item">
-                                            <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="mountain-house.html">
-                                                    <div class="project-grid-item-img">
-                                                        <img  src="https://placehold.co/260x250" data-lazy-src="img/work-category-list/7e39d145952101.58428e52b9279-768x419.jpg"
-                                                            class="s-img-switch wp-post-image wp-post-image" alt="mountain-house" />
-                                                    </div>
-                                                </a>
-                                                <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="mountain-house.html">Mountain
-                                                            House</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Abu Dhabi, UAE </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                  
                                 </div>
                             </div>
                         </div>
