--- a/projekty.html
+++ b/projekty.html
@@ -111,10 +111,10 @@
                                     <div class="prague_categories_btn">
                                         <div class="categories_btn categories_btn_up">
                                             <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                                            <span>PREV</span>
+                                            <span>Předchozí</span>
                                         </div>
                                         <div class="categories_btn categories_btn_down">
-                                            <span>NEXT</span>
+                                            <span>Další</span>
                                             <i class="fa fa-chevron-down" aria-hidden="true"></i>
                                         </div>
                                     </div>
@@ -306,10 +306,10 @@
                                     <div class="prague_categories_btn">
                                         <div class="categories_btn categories_btn_up">
                                             <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                                            <span>PREV</span>
+                                            <span>Předchozí</span>
                                         </div>
                                         <div class="categories_btn categories_btn_down">
-                                            <span>NEXT</span>
+                                            <span>Další</span>
                                             <i class="fa fa-chevron-down" aria-hidden="true"></i>
                                         </div>
                                     </div>
@@ -463,10 +463,10 @@
                                     <div class="prague_categories_btn">
                                         <div class="categories_btn categories_btn_up">
                                             <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                                            <span>PREV</span>
+                                            <span>Předchozí</span>
                                         </div>
                                         <div class="categories_btn categories_btn_down">
-                                            <span>NEXT</span>
+                                            <span>Další</span>
                                             <i class="fa fa-chevron-down" aria-hidden="true"></i>
                                         </div>
                                     </div>
