interiery images upload

--- a/projekty.html
+++ b/projekty.html
@@ -121,7 +121,7 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="fullscreen-slider.html">
+                                                <a class="project-grid-item-img-link" href="interiery_01.html">
                                                     <div class="project-grid-item-img">
                                                         <img   src="images/interiors/thumbnails/1.david.jpg" data-lazy-src="images/interiors/thumbnails/1.david.jpg"
                                                             class="s-img-switch wp-post-image" alt="seascape-villa image" />
